[package]
name = "ironlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
inline_colorization = "0.1.6"
ran = "2.0.1"
rand = "0.8.5"
strum = "0.26.2"
strum_macros = "0.26.2"
term = "0.7.0"
termion = "1.5.5"
